<resources>
    // Projeto/App
    <string name="app_name">Mini Quiz</string>
    <string name="projeto_name">Mini Quiz - Projeto Bilac</string>
    <string name="autor_app">Desenvolvido por Bryan Lima</string>
    <string name="versao_app">Versão 1.0</string>
    <string name="sobre_app">Este app foi desenvolvido como parte dos requisitos da disciplina de Programação para Dispositivos Móveis, pelo 5º Semestre do curso de Análise e Desenvolvimento de Sistemas (ADS), pelo Centro Universitário Etep - Campus Bilac de São José dos Campos/SP.</string>
    <string name="link_repositorio">github.com/bryan-lima/appAndroid-Mini-Quiz</string>

    <string name="start">Start</string>
    <string name="voltar">Voltar</string>
    <string name="voltar_home">Voltar para Home</string>
    <string name="tentar_novamente">Tentar Novamente</string>
    <string name="sobre">Sobre</string>

    // Quiz
    <string name="intro_quiz">No final de 2019, na China foi descoberto um novo agente de uma família de vírus (coronavírus), que se espalhou por vários continentes sendo declarado oficialmente como pandemia em 2020 pela OMS, Organização Mundial da Saúde.</string>
    <string name="quiz">Qual foi o nome dado à esse agente?</string>
    <string name="opcao1">SARS-CoV</string>
    <string name="opcao2">COVID-19</string>
    <string name="opcao3">MERS-CoV</string>
    <string name="parabens">PARABÉNS!!!</string>
    <string name="acertou">Você acertou!</string>
    <string name="ops">OPS!!!</string>
    <string name="errou">Mais sorte na próxima!</string>
</resources>
