<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SobreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sob_img_logo_app"
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/projeto_name"
            android:id="@+id/sob_txt_projeto_app"
            app:layout_constraintTop_toBottomOf="@+id/sob_img_logo_app"/>

        <TextView
            android:id="@+id/sob_txt_sobre_app"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sobre_app"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sob_txt_projeto_app" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </RelativeLayout>

        <View
            android:id="@+id/sob_vie_linha_rodape"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/sob_cli_txt_versao"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="#757575"
            app:layout_constraintBottom_toTopOf="@+id/sob_cli_txt_versao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/sob_cli_txt_versao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/versao_app"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/sob_btn_voltar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/voltar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sob_cli_txt_versao" />

    </LinearLayout>

</ScrollView>